# GCP_LOGGING

./: .dockerignore  .env.example  .env.prod.template  .firebaserc  .gcloudignore  .gitignore  ARCHITECTURE_SNAPSHOT.md  AUTOMATION_COMPLETE.md  BILLING_EXPORT_SETUP_GUIDE.md  CLAUDE.md  COMPLETE_SYSTEM_STATUS.md  CUD_EXPORT_FIX.md  DEPENDENCIES.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_VALIDATION_REPORT.md  Dockerfile  EDGE_DEPLOYMENT.md  EXECUTION_PLAN.md  FINAL_SETUP_GUIDE.md  FRONTEND_DEBUG_REPORT.md  GENERATED_TYPES.md  GO_LIVE_CHECKLIST.md  GRAPHQL_FRONTEND_WIRING.md  Makefile  Modelfile.gcp-db-agent  PRICING_CUD_EXPORT_SETUP.md  README.md  VALIDATION_REPORT.md  VERTEX_INVENTORY.json  VERTEX_INVENTORY.md  cloudbuild.yaml  dev.config.yaml  firebase.json  firestore.indexes.json  firestore.rules  gcl  incident_report.md  investigation_plan.yaml  pyproject.toml  pytest.ini  (+3 more)
.agent_prompts/: conventional_commit_message_builder.toon.json  run_gemini_workflow.sh  vertex_validate_and_integrate.toon.json  vertex_validate_prompt.txt
.gemini/: settings.json
config/: etl_scheduler.yaml  gcs_lifecycle.json  org_logs_access.json  org_logs_update.json
dashboard_assets/: alerts.yaml  dashboard_spec.json  views.sql
dashboards/: glass_pane.json
docs/: ADR_0001_LOG_STORAGE.md  ADR_0002_VERTEX_CUSTOM_MODEL.md  ARCHITECTURE.md  DEPLOYMENT_CONFIG.md  ENHANCEMENT_ANALYSIS.md  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  LOGGING_POSTURE.md  PRODUCTION_DEPLOYMENT.md  RUNBOOK.md  VERTEX_INTEGRATION_GUIDE.md  audit_report.md  gemini-models-reference.md  migrations.md  search_system.md
(+371 files in other folders)
